# kimi-agent-sdk

./: AGENT_CONNECTIVITY_FRAMEWORK.md  NOTICE  README.md
.github/workflows/: go.yml  node.yml  vscode.yml
examples/python/e2b-sandbox/: README.md  agent.yaml  e2b_kaos.py  main.py  pyproject.toml
examples/python/event-driven-agent/: README.md  github_bot.py
examples/python/kaos/: README.md
examples/python/kaos/boxlite/: README.md  agent.yaml  boxlite_kaos.py  main.py  pyproject.toml
examples/python/kaos/sprites/: README.md  agent.yaml  main.py  pyproject.toml  sprites_kaos.py
examples/ralph-loop/: README.md  main.go
examples/rumor-buster/: main.go
go/: README.md  session.go  session_test.go  tool_test.go  turn.go  turn_test.go
go/test/integration/: session_test.go
go/wire/: message.go  message_test.go
go/wire/jsonrpc2/: codec.go  codec_test.go
go/wire/transport/: transport_test.go
guides/python/: examples.md
node/: .env.example  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
node/agent_sdk/: README.md  config.ts  errors.ts  index.ts  package.json  paths.ts  protocol.ts  schema.ts  session.ts  storage.ts  tsup.config.ts  utils.ts
node/agent_sdk/cli/: commands.ts
node/agent_sdk/history/: context-extract.ts
node/agent_sdk/tests/: config.test.ts  protocol.test.ts  schema.test.ts  session.test.ts  utils.test.ts
node/vscode_extension/: .vscodeignore  esbuild.js  eslint.config.mjs  package.json  tsconfig.json
python/: CHANGELOG.md
python/tests/: test_connectors.py  test_exceptions.py
(+67 files in other folders)
